--- a/images/style.css
+++ b/images/style.css
@@ -147,7 +147,7 @@ tr.row-b {
 form {
 	margin:10px; padding: 0 5px;
 	border: 1px solid #f2f2f2; 
-	background-color: #FAFAFA; 	
+	background-color: #708090; 	
 }
 label {
 	display:block;
