--- a/images/style.css
+++ b/images/style.css
@@ -348,13 +348,13 @@ input.button {
 	float: right;
 	width: 26.5%;
 	padding: 0; margin: 0;	
-	color: #F8F8FF;	
+	color: 	#2F4F4F;	
 }	
 #sidebar h3 {
 	margin-top: 10px;
 	padding: 5px 5px; 
 	font: bold 1.4em 'Trebuchet MS', Tahoma, Sans-serif;
-	color: #F8F8FF;	
+	color: 	#2F4F4F;	
 }
 #sidebar ul.sidemenu {
 	list-style: none;
@@ -368,7 +368,7 @@ input.button {
 	background: url(dots.jpg) repeat-x left bottom;
 	padding: 4px 0 4px 5px;
 	margin: 0 2px;	
-	color: #F8F8FF;	
+	color: 	#2F4F4F;	
 }
 * html body #sidebar ul.sidemenu li {
 	height: 1%;
@@ -376,10 +376,10 @@ input.button {
 #sidebar ul.sidemenu li a {
 	text-decoration: none;	
 	background-image: none;	
-	color: #F8F8FF;			
+	color: 	#2F4F4F;			
 }
 #sidebar ul.sidemenu li a:hover {	
-	color: #F8F8FF;	
+	color: 	#2F4F4F;	
 }
 #sidebar ul.sidemenu ul { margin: 0 0 0 5px; padding: 0; }
 #sidebar ul.sidemenu ul li { background: none; }
