--- a/images/style.css
+++ b/images/style.css
@@ -327,7 +327,7 @@ input.button {
 .post-footer {
 	background-color: #FAFAFA;
 	padding: 5px; margin: 20px 10px 10px 10px;
-	border: 1px solid #f2f2f2;
+	border: 1px solid #FFFFFF;
 	font-size: 95%;	
 }
 .post-footer .date {
@@ -387,7 +387,7 @@ input.button {
 
 /* Footer */	
 #footer {
-	color: #4682B4;
+	color: #2F4F4F;
 	background: #CCC url(footer.jpg) no-repeat center top;
 	clear: both;
 	width: 820px;
@@ -396,7 +396,7 @@ input.button {
 	font-size: 92%;	
 }
 #footer a { 
-	color: #4682B4;
+	color: #2F4F4F;
 	text-decoration: none; 
 }
 
