--- a/images/style.css
+++ b/images/style.css
@@ -15,7 +15,7 @@
 * { margin: 0; padding: 0; outline: 0 }
 
 body {
-	background: #CCC;
+	background: none;
 	font: 70%/1.5em Verdana, Tahoma, arial, sans-serif;
 	color: #555; 
 	text-align: center;
