--- a/images/style.css
+++ b/images/style.css
@@ -268,7 +268,7 @@ input.button {
 #menu {
 	clear: both;	
 	margin: 0 auto; padding: 0;
-	background: url(menu.jpg) repeat-x 0 0;	
+	background: none;	
 	font: bold 12px/37px Verdana, Arial, Tahoma, Sans-serif;
 	height: 37px;
 	width: 780px;	
@@ -285,17 +285,17 @@ input.button {
 	display: block;
 	float: left;
 	padding: 0 12px;
-	color: #FFF;	
+	color: #2F4F4F;	
 	text-decoration: none;
 }
 #menu ul li.last a {
 	padding-right: 20px;	
 }
 #menu ul li a:hover {
-	color: #D4E59F;	
+	color: #2F4F4F;	
 }
 #menu ul li#current a {	
-	color: #D4E59F;
+	color: #2F4F4F;
 }
 
 /* Main Column */
