--- a/images/style.css
+++ b/images/style.css
@@ -91,7 +91,7 @@ code {
   overflow: auto;  
   font: 500 1em/1.5em 'Lucida Console', 'courier new', monospace ;
   /* white-space: pre; */
-  background: #FAFAFA;
+  background: none;
   border: 1px solid #f2f2f2;  
 }
 acronym {
@@ -102,7 +102,7 @@ blockquote {
 	margin: 10px;
  	padding: 0 0 0 28px;  
    border: 1px solid #f2f2f2; 
-  	background: #FAFAFA url(quote.gif) no-repeat 5px 5px;    
+  	background: none;    
 }
 
 /* start - table */
@@ -114,7 +114,7 @@ th strong {
 	color: #fff;
 }
 th {
-	background: #93BC0C;
+	background: none;
 	height: 29px;
 	padding-left: 12px;
 	padding-right: 12px;
@@ -139,7 +139,7 @@ tr.row-a {
 	background: #F8F8F8;
 }
 tr.row-b {
-	background: #EFEFEF;
+	background: none;
 }*/
 /* end - table */
 
@@ -175,7 +175,7 @@ input.button {
 	margin: 0;
 	padding: 2px 3px; 
 	color: #FFF;
-	background: #8EB50C url(button-bg.jpg) repeat-x 0 0;
+	background: none;
 	border: none;
 }
 
