--- a/images/style.css
+++ b/images/style.css
@@ -28,7 +28,7 @@ a, a:visited {
 	background: inherit;
 }
 a:hover {
-	color: #88ac0b;
+	color: #000000;
 	background: inherit;
 	text-decoration: underline;
 }
